ajuste pedido pagamento