@@ -1,14 +1,15 @@
 package com.fiap.restaurante.infrastructure.adapter.out;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fiap.restaurante.infrastructure.adapter.in.request.PedidoRequest;
 import com.fiap.restaurante.infrastructure.adapter.in.request.StatusRequest;
 import com.fiap.restaurante.infrastructure.adapter.in.response.PedidoResponse;
-import org.modelmapper.ModelMapper;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.*;
 import org.springframework.stereotype.Component;
@@ -18,9 +19,6 @@ import com.fiap.restaurante.application.port.out.PedidoAdapterPortOut;
 import com.fiap.restaurante.core.domain.OrderStatus;
 import com.fiap.restaurante.core.domain.Pedido;
 import com.fiap.restaurante.core.domain.PedidoProduto;
-import com.fiap.restaurante.infrastructure.adapter.out.repository.PedidoProdutoRepository;
-import com.fiap.restaurante.infrastructure.adapter.out.repository.PedidoRepository;
-import com.fiap.restaurante.infrastructure.adapter.out.repository.ProdutoRepository;
 
 @Component
 public class PedidoAdapterOut implements PedidoAdapterPortOut {
@@ -29,15 +27,6 @@ public class PedidoAdapterOut implements PedidoAdapterPortOut {
 
     @Value("${pedido.service.url}")
     private String pedidoServiceUrl;
-
-    @Autowired
-    private PedidoRepository pedidoRepository;
-    @Autowired
-    private ProdutoRepository produtoRepository;
-    @Autowired
-    private PedidoProdutoRepository pedidoProdutoRepository;
-    @Autowired
-    private ModelMapper mapper;
 
     public PedidoAdapterOut(RestTemplate restTemplate) {
         this.restTemplate = restTemplate;
@@ -51,12 +40,7 @@ public class PedidoAdapterOut implements PedidoAdapterPortOut {
         StatusRequest statusRequest = new StatusRequest(status.getStatusCode());
         HttpEntity<StatusRequest> requestEntity = new HttpEntity<>(statusRequest, headers);
 
-        ResponseEntity<String> response = restTemplate.exchange(
-                pedidoServiceUrl + "/" + id,
-                HttpMethod.PUT,
-                requestEntity,
-                String.class
-        );
+        ResponseEntity<String> response = restTemplate.exchange(pedidoServiceUrl + "/" + id, HttpMethod.PUT, requestEntity, String.class);
 
         if (response.getStatusCode().is2xxSuccessful()) {
             String responseBody = response.getBody();
@@ -71,25 +55,16 @@ public class PedidoAdapterOut implements PedidoAdapterPortOut {
         }
     }
 
-
     @Override
     public Pedido checkoutPedido(Pedido pedido) {
-
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_JSON);
 
-        var pedidoRequest = new PedidoRequest(
-                pedido.getIdCliente(), pedido.getListaPedidoProduto().stream().map(
-                PedidoProduto::toRequest
-        ).toList());
+        var pedidoRequest = new PedidoRequest(pedido.getIdCliente(), pedido.getListaPedidoProduto().stream().map(PedidoProduto::toRequest).collect(Collectors.toList()));
 
         HttpEntity<PedidoRequest> requestEntity = new HttpEntity<>(pedidoRequest, headers);
 
-        ResponseEntity<String> response = restTemplate.postForEntity(
-                pedidoServiceUrl,
-                requestEntity,
-                String.class
-        );
+        ResponseEntity<String> response = restTemplate.postForEntity(pedidoServiceUrl, requestEntity, String.class);
 
         if (response.getStatusCode() == HttpStatus.CREATED) {
             return pedido;
@@ -105,16 +80,12 @@ public class PedidoAdapterOut implements PedidoAdapterPortOut {
 
         HttpEntity<String> requestEntity = new HttpEntity<>(headers);
 
-        ResponseEntity<PedidoResponse> response = restTemplate.exchange(
-                pedidoServiceUrl + "/" + id,
-                HttpMethod.GET,
-                requestEntity,
-                PedidoResponse.class
-        );
+        ResponseEntity<PedidoResponse> response = restTemplate.exchange(pedidoServiceUrl + "/" + id, HttpMethod.GET, requestEntity, PedidoResponse.class);
 
         if (response.getStatusCode().is2xxSuccessful()) {
             PedidoResponse pedidoResponse = response.getBody();
-            return mapper.map(pedidoResponse, Pedido.class);
+            assert pedidoResponse != null;
+            return PedidoResponse.toDomain(pedidoResponse);
         } else {
             throw new RuntimeException("Erro ao buscar o pedido por ID: " + response.getBody());
         }
@@ -127,19 +98,16 @@ public class PedidoAdapterOut implements PedidoAdapterPortOut {
 
         HttpEntity<String> requestEntity = new HttpEntity<>(headers);
 
-        ResponseEntity<PedidoResponse[]> response = restTemplate.exchange(
-                pedidoServiceUrl,
-                HttpMethod.GET,
-                requestEntity,
-                PedidoResponse[].class
-        );
+        ResponseEntity<PedidoResponse[]> response = restTemplate.exchange(pedidoServiceUrl, HttpMethod.GET, requestEntity, PedidoResponse[].class);
 
         if (response.getStatusCode().is2xxSuccessful()) {
             PedidoResponse[] pedidoResponses = response.getBody();
-            return List.of(pedidoResponses).stream().map(pedidoResponse -> mapper.map(pedidoResponse, Pedido.class)).toList();
+            assert pedidoResponses != null;
+            return Stream.of(pedidoResponses)
+                    .map(PedidoResponse::toDomain)
+                    .collect(Collectors.toList());
         } else {
-            throw new RuntimeException("Erro ao listar os pedidos: " + response.getBody());
+            throw new RuntimeException("Erro ao listar os pedidos: " + Arrays.toString(response.getBody()));
         }
     }
-
 }
